--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp": "^4.0.2",
     "gulp-imagemin": "^7.1.0",
     "gulp-json-editor": "^2.5.6",
+    "gulp-uglify": "^3.0.2",
     "gulp-zip": "^5.1.0"
   },
   "scripts": {
